# Humanoid-lower-body-12dof

./: README.md
Chaos_main_1/: Chaos_main_1 Debug.launch  Chaos_main_1.ioc  JETSON_NOTES.txt  NODE_FLOW.md  STM32_SAFETY_SUMMARY.txt
Chaos_main_1/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Chaos_main_1/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Chaos_main_1/lib/BQ76952/: BQ76952.c  BQ76952.h
Chaos_main_1/lib/MPU6050/: MPU6050.c  MPU6050.h
Chaos_main_1/lib/NRF24/: NRF24.c  NRF24.h  NRF24_conf.h
Chaos_main_1/lib/Protection/: protection.c  protection.h
Chaos_main_1/lib/Utils/: utils.c  utils.h
Chaos_test3/: Chaos_test3 Debug.launch  Chaos_test3.ioc
Chaos_test3/Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
Chaos_test3/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Chaos_test3/lib/AS5600/: as5600.c  as5600.h
Chaos_test3/lib/CAN/: CAN.c  CAN.h
Chaos_test3/lib/DRV8302_Driver/: DRV8302.c  DRV8302.h  DRV8302_config.h
Chaos_test3/lib/DRV8323_Driver/: DRV8323.c  DRV8323.h  DRV8323_config.h
Chaos_test3/lib/FLASH/: flash.c  flash.h
Chaos_test3/lib/FOC/: FOC_math.h  FOC_protection.c  FOC_protection.h  FOC_utils.c  FOC_utils.h
Chaos_test3/lib/LUT/: bldc_quickLut.c  bldc_quickLut.h
Chaos_test3/lib/MT6816/: MT6816.c  MT6816.h
RL/robolab/assets/robots/: __init__.py  chaos.py
RL/robolab/tasks/manager_based/amp/: __init__.py  amp_env_cfg.py  animation_env.py  atom01_amp_env_cfg.py
RL/robolab/tasks/manager_based/amp/agents/: atom01_amp_agent_cfg.py
RL/robolab/tasks/manager_based/amp/managers/: animation_manager.py
RL/robolab/tasks/manager_based/amp/mdp/: __init__.py  curriculums.py  events.py  observations.py  rewards.py
RL/robolab/tasks/manager_based/amp/mdp/symmetry/: chaos.py
RL/robolab/utils/: keyboard.py
RL/scripts/rsl_rl/: eval_amp.py  motion_replay.py  play.py  train.py
RL/scripts/rsl_rl/eval/: README.md  __init__.py  accumulators.py  config.py  metrics.py  phases.py  plotting.py  writers.py
RL/scripts/tools/: compare_step_response.py  inspect_usd_masses.py  spawn_default.py  step_response_sim.py  tune_hip_pitch_watchdog.py  tune_knee_watchdog.py
ws1_cpp/ws1_cpp/: CMakeLists.txt  NODE_FLOW.md  actor.onnx  actor.onnx.data  package.xml
ws1_cpp/ws1_cpp/action_node/: action_node.cpp  action_node.hpp
ws1_cpp/ws1_cpp/sensor_node/: sensor_node.cpp  sensor_node.hpp
ws1_cpp/ws1_cpp/src/: main.cpp  main.hpp  utils.hpp
ws1_cpp/ws1_cpp/test_model_node/: test_model_node.cpp
